Add menu animation on start

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -74,7 +74,7 @@ $gutter-horizontal: 6rem;
   --tab-height: 4.2rem;
   --tab-width: 12rem;
 
-  --easing: cubic-bezier(0.645, 0.045, 0.355, 1);
+  --cubanime: cubic-bezier(0.645, 0.045, 0.355, 1);
   --transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
 
   --hamburger-width: 3rem;
