--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -15,11 +15,11 @@ header {
   backdrop-filter: blur(10px);
   transition: var(--transition);
 
-  @media (max-width: 1080px) {
-    padding: 0 40px;
+  @media (max-width: 108rem) {
+    padding: 0 4rem;
   }
-  @media (max-width: 768px) {
-    padding: 0 25px;
+  @media (max-width: 76.8rem) {
+    padding: 0 2.5rem;
   }
 
   .scroll-up {
