--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,6 +4,7 @@
 @import "base/base";
 @import "base/typography";
 @import "base/utilities";
+@import "base/transitions";
 
 @import "components/button";
 @import "components/card";
@@ -12,5 +13,6 @@
 @import "layout/footer";
 @import "layout/header";
 @import "layout/navigation";
+@import "layout/burger-navigation";
 
 @import "pages/home";
