--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -51,19 +51,11 @@ ORDER: Base + typography > general layout + grid > page layout > components
   --fonts-xxl: 3.8rem;
   --fonts-heading: 4.6rem;
   --border-radius: 4px;
-  --nav-height: 10rem;
-  --nav-scroll-height: 7rem;
+  --nav-height: 100px;
   --tab-height: 4.2rem;
   --tab-width: 12rem;
   --cubanime: cubic-bezier(0.645, 0.045, 0.355, 1);
   --transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
-  --hamburger-width: 3rem;
-  --ham-before: top 0.1s ease-in 0.25s, opacity 0.1s ease-in;
-  --ham-before-active: top 0.1s ease-out, opacity 0.1s ease-out 0.12s;
-  --ham-after: bottom 0.1s ease-in 0.25s,
-    transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  --ham-after-active: bottom 0.1s ease-out,
-    transform 0.22s cubic-bezier(0.215, 0.61, 0.355, 1) 0.12s;
 }
 
 *,
@@ -79,12 +71,12 @@ html {
 }
 @media only screen and (max-width: 75em) {
   html {
-    font-size: 56.25%;
+    font-size: 58%;
   }
 }
 @media only screen and (max-width: 56.25em) {
   html {
-    font-size: 50%;
+    font-size: 55%;
   }
 }
 @media only screen and (min-width: 112.5em) {
@@ -190,6 +182,7 @@ a:hover, a:focus {
   color: var(--green);
 }
 a:hover, a:focus, a:active {
+  transform-origin: 0% 50%;
   color: var(--green);
   outline: 0;
 }
@@ -687,10 +680,9 @@ header {
   position: fixed;
   top: 0;
   z-index: 11;
-  padding: 0px 5rem;
-  width: 94%;
+  width: 100%;
   height: var(--nav-height);
-  background-color: rgba(10, 25, 47, 0.85);
+  background-color: #020c1b;
   box-shadow: 1rem 1rem 2rem rgba(0, 0, 0, 0.1);
   filter: none !important;
   pointer-events: auto !important;
@@ -702,20 +694,10 @@ header {
           backdrop-filter: blur(10px);
   transition: var(--transition);
 }
-@media (max-width: 108rem) {
-  header {
-    padding: 0 4rem;
-  }
-}
-@media (max-width: 76.8rem) {
-  header {
-    padding: 0 2.5rem;
-  }
-}
 header .scroll-up {
   height: var(--nav-scroll-height);
   transform: translateY(0px);
-  background-color: rgba(10, 25, 47, 0.85);
+  background-color: #212529;
   box-shadow: 0 10px 30px -10px var(--navy-shadow);
 }
 header .scroll-down {
@@ -724,12 +706,60 @@ header .scroll-down {
   box-shadow: 0 10px 30px -10px var(--navy-shadow);
 }
 
+.logo {
+  width: 20rem;
+  height: 100%;
+  padding: 0;
+  background-color: black;
+}
+.logo .flexRow {
+  display: flex;
+  max-height: 100%;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  font-family: "Open Sans";
+}
+.logo .flexRow .nameText {
+  flex-grow: 1;
+  color: white;
+  font-size: 1.6rem;
+}
+.logo .flexRow .jobTitle {
+  font-size: 1.4rem;
+}
+.logo .logoText {
+  color: #e23c52;
+  text-shadow: -0.3rem -0.1rem 0px #bdfff6, -0.4rem -0.1rem 0px #bdfff6;
+  font-size: 8rem;
+  font-weight: 600;
+  font-family: "Open Sans";
+  justify-self: center;
+}
+.logo .text-column {
+  font-family: "Open Sans";
+  font-style: italic;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-self: center;
+}
+.logo:hover .logoText {
+  transition: all 0.2s;
+}
+.logo:hover .logoText:hover {
+  transform: scale(1.05);
+}
+
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: relative;
+  height: 100%;
   width: 100%;
+  padding-right: 5rem;
   color: var(--lightest-slate);
   font-family: var(--font-mono);
   z-index: 12;
@@ -738,7 +768,6 @@ nav .logo {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 0.5rem;
 }
 nav .logo a {
   color: var(--green);
