Play with logo and portfolio colors

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -28,11 +28,12 @@
   &:hover,
   &:focus,
   &:active {
-    transform-origin: 0% 50%;
     color: var(--green);
     outline: 0;
+
     &:after {
       width: 100%;
+      left: 0%;
     }
     & > * {
       color: var(--green) !important;
@@ -44,7 +45,10 @@
     content: "";
     display: block;
     width: 0;
-    height: 1px;
+    border-radius: 50px;
+    left: 50%;
+    height: 2px;
+    margin-top: 1px;
     position: relative;
     bottom: 0.37em;
     background-color: var(--green);
