--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -38,7 +38,9 @@ $gutter-horizontal: 6rem;
   --light-red: #cf7873;
   --light-red-disabled: #cf78736b;
   --dark-navy: #020c1b;
-  --navy: #0a192f;
+  --logo-color: #e23c52;
+  // --navy: #0a192f;
+  --navy: #002244;
   --light-navy: #112240;
   --lightest-navy: #233554;
   --navy-shadow: rgba(2, 12, 27, 0.7);
@@ -47,13 +49,14 @@ $gutter-horizontal: 6rem;
   --light-slate: #a8b2d1;
   --lightest-slate: #ccd6f6;
   --white: #e6f1ff;
-  --green: #64ffda;
+  // --green: #64ffda;
+  --green: #08fdd8;
   --green-tint: rgba(100, 255, 218, 0.1);
   --pink: #f57dff;
   --blue: #57cbff;
 
-  --font-sans: "Calibre", "Inter", "San Francisco", "SF Pro Text", -apple-system,
-    system-ui, sans-serif;
+  --font-sans: "Open Sans", "Calibre", "Inter", "San Francisco", "SF Pro Text",
+    -apple-system, system-ui, sans-serif;
   --font-mono: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
 
   // Font size
@@ -68,7 +71,7 @@ $gutter-horizontal: 6rem;
   --fonts-heading: 4.6rem;
 
   --border-radius: 4px;
-  --nav-height: 100px;
+  --nav-height: 90px;
   --tab-height: 4.2rem;
   --tab-width: 12rem;
 
