Feat: make hero-grid and image-styling

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -41,6 +41,11 @@
     }
   }
 
+  &:focus:after {
+    width: 0;
+    height: 0;
+  }
+
   &:after {
     content: "";
     display: block;
@@ -87,7 +92,12 @@ ORDER: Base + typography > general layout + grid > page layout > components
     } //900px
   }
   @if $breakpoint == tab-land {
-    @media only screen and (max-width: 75em) {
+    @media only screen and (max-width: 85em) {
+      @content;
+    } //1200px
+  }
+  @if $breakpoint == tab-land-big {
+    @media only screen and (max-width: 100em) {
       @content;
     } //1200px
   }
