--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -50,7 +50,7 @@ nav {
         counter-increment: item 1;
         margin: 0 5px;
         position: relative;
-        font-size: var(--fonts-xs);
+        font-size: var(--fonts-sm);
 
         & a {
           padding: 0.5rem;
