--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -56,21 +56,15 @@ html {
 }
 
 body {
+  box-sizing: border-box;
   margin: 0;
   width: 100%;
   min-height: 100%;
-  overflow-x: hidden;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   background-color: var(--navy);
-  color: var(--slate);
   font-family: var(--font-sans);
-  font-size: var(--fonts-xl);
   line-height: 1.3;
-
-  @media (max-width: 48rem) {
-    font-size: var(--fonts-lg);
-  }
 
   &.hidden {
     overflow: hidden;
