--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: var(--fonts-sans);
   font-weight: 400;
   /*font-size: 16px;*/
   line-height: 1.7;
@@ -7,57 +7,47 @@ body {
 }
 
 .heading-primary {
-  color: $color-white;
-  text-transform: uppercase;
-
   backface-visibility: hidden;
   margin-bottom: 6rem;
 
   &--main {
+    color: var(--white);
+    letter-spacing: 0.2rem;
     display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
+    font-size: var(--fonts-big-heading);
+    font-weight: 600;
+    line-height: 1.2;
+    margin-bottom: 2rem;
 
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out;
 
-    @include respond(phone) {
-      letter-spacing: 1rem;
-      font-family: 5rem;
+    @include respond(tab-land) {
+      font-size: 4.2rem;
     }
-    /*
-        animation-delay: 3s;
-        animation-iteration-count: 3;
-        */
   }
 
   &--sub {
     display: block;
-    font-size: 2rem;
+    font-size: var(--fonts-sub-heading);
     font-weight: 700;
-    letter-spacing: 1.75rem;
+    color: var(--light-slate);
+    letter-spacing: 0.1rem;
+    line-height: 1.2;
     animation: moveInRight 1s ease-out;
 
-    @include respond(phone) {
-      letter-spacing: 0.5rem;
+    @include respond(tab-land) {
+      font-size: 3.2rem;
     }
   }
 }
 
 .heading-secondary {
   font-size: 3.5rem;
-  text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
-  background-image: linear-gradient(
-    to right,
-    $color-primary-light,
-    $color-primary-dark
-  );
-  -webkit-background-clip: text;
-  color: transparent;
+  color: var(--lightest-slate);
   letter-spacing: 0.2rem;
   transition: all 0.2s;
 
@@ -75,16 +65,9 @@ body {
   }
 }
 
-.heading-tertiary {
-  font-size: $default-font-size;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-.paragraph {
-  font-size: $default-font-size;
-
-  &:not(:last-child) {
-    margin-bottom: 3rem;
-  }
+.heading-stylist {
+  font-size: var(--fonts-xs);
+  font-weight: 500;
+  letter-spacing: 0.2rem;
+  color: var(--green);
 }
