--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -17,7 +17,7 @@ body {
     font-size: var(--fonts-big-heading);
     font-weight: 600;
     line-height: 1.2;
-    margin-bottom: 2rem;
+    margin-bottom: 0.8rem;
 
     animation-name: moveInLeft;
     animation-duration: 1s;
@@ -35,6 +35,7 @@ body {
     color: var(--light-slate);
     letter-spacing: 0.1rem;
     line-height: 1.2;
+    margin-bottom: 2.8rem;
     animation: moveInRight 1s ease-out;
 
     @include respond(tab-land) {
@@ -47,7 +48,7 @@ body {
   font-size: 3.5rem;
   font-weight: 700;
   display: inline-block;
-  color: var(--lightest-slate);
+  color: var(--light-slate);
   letter-spacing: 0.2rem;
   transition: all 0.2s;
 
