--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -21,11 +21,17 @@
     align-self: center;
     gap: 1.6rem;
   }
+
+  &__description-text {
+    font-size: var(--fonts-md);
+    line-height: 1.3;
+    color: var(--light-slate);
+  }
 }
 
 @include respond(tab-land) {
   .section-about {
-    padding: 10rem 10rem;
+    padding: 10rem 8rem;
   }
 }
 
@@ -35,14 +41,19 @@
   }
 }
 
-@media (max-width: 60rem) {
+@include respond(tab-port) {
+  .section-about {
+    padding: 10rem 2rem;
+  }
+
   .about {
+    margin-top: 3.6rem;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
-    gap: 1rem;
+    gap: 6.4rem;
 
-    &__image-box {
-      justify-self: start;
+    &__text-box {
+      justify-self: center;
     }
   }
 }
